@@ -78,8 +78,8 @@
             <arg>--guess</arg>
           </args>
           <gems>
-            <gem>cucumber:0.3.100</gem>
-            <gem>aslakhellesoy-ansicolor:1.0</gem>
+            <gem>cucumber --version 0.3.101</gem>
+            <gem>aslakhellesoy-ansicolor --version 1.0 --source http://gems.github.com/</gem>
           </gems>
         </configuration>
         <executions>
