@@ -3,6 +3,8 @@
 This release has some small backwards incompatible changes that should only affect your build scripts. If you're
 using Groovy you also have to change your step definitions to use strings instead of regexps.
 
+Make sure you read the release notes carefully before upgrading!
+
 === New features
 * Java snippets should now be valid Java code (Aslak Hellesøy)
 * Examples' Maven builds install aslakhellesoy-ansicolor (needed for the poor windows users) (Aslak Hellesøy)
@@ -10,6 +12,7 @@ using Groovy you also have to change your step definitions to use strings instea
 * Added -Dcucumber.extraArgs command line parameter that allows us to add extra cucumber arguments as a string surrounded with " " and a space as the delimitor. E.g -Dcucmber.extraArgs="--color --tag @dev" (#14 Torbjørn Vatn)
 
 === Changed Features
+* The Maven <gem> element has changed. You can now pass extra arguments, and there are no funny : delimiters. See examples. (#22 Aslak Hellesøy)
 * Groovy step definitions must use String instead of Regexp. The regexp matching happens on the Ruby side, so Regexp was misleading (Aslak Hellesøy)
 * -Dcuke4duke.objectFactory classes have changed package from cuke4duke.internal.java to cuke4duke.internal.jvmclass (Aslak Hellesøy)
 * --require **/*.java no longer supported. --require **/*.class instead (Aslak Hellesøy)
